--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
 jobs:
-  oublish:
+  publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
