--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,3 +16,5 @@ jobs:
       - name: Run Script
         run: |
           ./.github/scripts/publish.sh
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
