Fix subpath in Expino
Signed-off-by: Maartje Eyskens <maartje@eyskens.me>

--- a/expino/templates/deployment-admin.yaml
+++ b/expino/templates/deployment-admin.yaml
@@ -37,6 +37,7 @@ spec:
           volumeMounts:
             - name: variables
               mountPath: /var/www/variables.js
+              subPath: variables.js
           ports:
             - name: http
               containerPort: 80
