--- a/expino/templates/deployment-expino.yaml
+++ b/expino/templates/deployment-expino.yaml
@@ -32,7 +32,7 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.expino.image.repository }}:v{{ .Values.expino.image.tag }}"
+          image: "{{ .Values.expino.image.repository }}:{{ .Values.expino.image.tag }}"
           imagePullPolicy: {{ .Values.expino.image.pullPolicy }}
           volumeMounts:
             - name: variables
