--- a/expino/templates/ingress-api.yaml
+++ b/expino/templates/ingress-api.yaml
@@ -8,7 +8,7 @@ apiVersion: extensions/v1beta1
 {{- end }}
 kind: Ingress
 metadata:
-  name: {{ $fullName }}
+  name: {{ $fullName }}-api
   labels:
     {{- include "expino.labels" . | nindent 4 }}
     mect.io/component: api
