--- a/pg-backup-s3/values.yaml
+++ b/pg-backup-s3/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 image:
-  repository: quay.io/mect/pg-backup-s3
+  repository: ghcr.io/mect/pg-backup-s3
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
