--- a/pg-backup-s3/templates/cronjob.yaml
+++ b/pg-backup-s3/templates/cronjob.yaml
@@ -15,7 +15,7 @@ spec:
             - name: {{ .Chart.Name }}
               securityContext:
                 {{- toYaml .Values.securityContext | nindent 16 }}
-              image: "{{ .Values.image.repository }}:{{ .Chart.AppVersion }}"
+              image: "{{ .Values.image.repository }}:{{ .Values.image.postgresVersion }}-{{ .Chart.AppVersion }}"
               imagePullPolicy: {{ .Values.image.pullPolicy }}
               resources:
                 {{- toYaml .Values.resources | nindent 16 }}
