--- a/pg-backup-s3/values.yaml
+++ b/pg-backup-s3/values.yaml
@@ -5,6 +5,7 @@
 image:
   repository: ghcr.io/mect/pg-backup-s3
   pullPolicy: IfNotPresent
+  postgresVersion: "12"
 
 imagePullSecrets: []
 nameOverride: ""
