--- a/expino/values.yaml
+++ b/expino/values.yaml
@@ -2,24 +2,36 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+displays:
+  - name: display
+    replicaCount: 1
+    configuration:
+      apiURL: "http://expino-api.expino.svc.cluster.local"
+      token: ""
+      themeColor: "#368ad8"
+      watherCity: "Antwerpen, BE"
+      logoURL: ""
+      style: ""
+      tickerSize: "3rem"
+    ingress:
+      enabled: false
+      annotations: {}
+        # kubernetes.io/ingress.class: nginx
+        # kubernetes.io/tls-acme: "true"
+      hosts:
+        - host: chart-example.local
+          paths: []
+      tls: []
+      #  - secretName: chart-example-tls
+      #    hosts:
+      #      - chart-example.local
+
 expino:
-  replicaCount: 1
-  ingress:
-    enabled: false
-    annotations: {}
-      # kubernetes.io/ingress.class: nginx
-      # kubernetes.io/tls-acme: "true"
-    hosts:
-      - host: chart-example.local
-        paths: []
-    tls: []
-    #  - secretName: chart-example-tls
-    #    hosts:
-    #      - chart-example.local
   image:
     repository: ghcr.io/mect/expino
     pullPolicy: IfNotPresent
     tag: latest
+
 api:
   replicaCount: 1
   persistence:
@@ -63,10 +75,6 @@ admin:
     tag: latest
 
 configuration:
-  apiURL: "http://expino-api.expino.svc.cluster.local"
-  themeColor: "#368ad8"
-  watherCity: "Antwerpen, BE"
-  logoURL: ""
   secretName: ""
 
 imagePullSecrets: []
