--- a/expino/templates/ingress-expino.yaml
+++ b/expino/templates/ingress-expino.yaml
@@ -4,7 +4,7 @@
 {{- if .ingress.enabled -}}
 {{- $fullName := include "expino.fullname" $root -}}
 {{- $svcPort := $root.Values.service.port -}}
-{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
+{{- if semverCompare ">=1.14-0" $root.Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1beta1
 {{- else -}}
 apiVersion: extensions/v1beta1
