--- a/expino/templates/ingress-expino.yaml
+++ b/expino/templates/ingress-expino.yaml
@@ -39,7 +39,7 @@ spec:
         {{- range .paths }}
           - path: {{ . }}
             backend:
-              serviceName: {{ $fullName }}-expino
+              serviceName: {{ $fullName }}-{{ .name }}
               servicePort: {{ $svcPort }}
         {{- end }}
   {{- end }}
