--- a/bitwardenrs/Chart.yaml
+++ b/bitwardenrs/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: bitwardenrs
-description: A Helm chart for Bitwardenrs
+description: A Helm chart for Vaultwarden (formerly Bitwarden_rs)
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -14,8 +14,8 @@ type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
-version: 0.1.0
+version: 0.2.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
-appVersion: 1.20.0
+appVersion: 1.26.0
