--- a/expino/templates/ingress-admin.yaml
+++ b/expino/templates/ingress-admin.yaml
@@ -1,11 +1,7 @@
 {{- if .Values.admin.ingress.enabled -}}
 {{- $fullName := include "expino.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
-{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1beta1
-{{- else -}}
-apiVersion: extensions/v1beta1
-{{- end }}
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ $fullName }}-admin
@@ -17,26 +13,30 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-{{- if .Values.admin.ingress.tls }}
+  ingressClassName: {{ .Values.ingress.className }}
+  {{- if .Values.admin.ingress.tls }}
   tls:
-  {{- range .Values.admin.ingress.tls }}
+    {{- range .Values.admin.ingress.tls }}
     - hosts:
-      {{- range .hosts }}
+        {{- range .hosts }}
         - {{ . | quote }}
-      {{- end }}
+        {{- end }}
       secretName: {{ .secretName }}
+    {{- end }}
   {{- end }}
-{{- end }}
   rules:
-  {{- range .Values.admin.ingress.hosts }}
+    {{- range .Values.admin.ingress.hosts }}
     - host: {{ .host | quote }}
       http:
         paths:
-        {{- range .paths }}
-          - path: {{ . }}
+          {{- range .paths }}
+          - path: {{ .path }}
+            pathType: {{ .pathType }}
             backend:
-              serviceName: {{ $fullName }}-admin
-              servicePort: {{ $svcPort }}
-        {{- end }}
-  {{- end }}
+              service:
+                name: {{ $fullName }}-admin
+                port:
+                  number: {{ $svcPort }}
+          {{- end }}
+    {{- end }}
 {{- end }}
