--- a/expino/templates/ingress-expino.yaml
+++ b/expino/templates/ingress-expino.yaml
@@ -4,11 +4,7 @@
 {{- if .ingress.enabled -}}
 {{- $fullName := include "expino.fullname" $root -}}
 {{- $svcPort := $root.Values.service.port -}}
-{{- if semverCompare ">=1.14-0" $root.Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1beta1
-{{- else -}}
-apiVersion: extensions/v1beta1
-{{- end }}
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ $fullName }}-{{ .name }}
@@ -21,28 +17,30 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-{{- if .ingress.tls }}
+  ingressClassName: {{ .Values.api.ingress.className }}
+  {{- if .Values.ingress.tls }}
   tls:
-  {{- range .ingress.tls }}
+    {{- range .Values.ingress.tls }}
     - hosts:
-      {{- range .hosts }}
+        {{- range .hosts }}
         - {{ . | quote }}
-      {{- end }}
+        {{- end }}
       secretName: {{ .secretName }}
+    {{- end }}
   {{- end }}
-{{- end }}
   rules:
-  {{ $setup := .}}
-  {{- range .ingress.hosts }}
+    {{- range .Values.ingress.hosts }}
     - host: {{ .host | quote }}
       http:
         paths:
-        {{- range .paths }}
-          - path: {{ . }}
+          {{- range .paths }}
+          - path: {{ .path }}
+            pathType: {{ .pathType }}
             backend:
-              serviceName: {{ $fullName }}-{{ $setup.name }}
-              servicePort: {{ $svcPort }}
-        {{- end }}
-  {{- end }}
-{{- end }}
+              service:{{- end }}
+                name: {{ $fullName }}
+                port:
+                  number: {{ $svcPort }}
+          {{- end }}
+    {{- end }}
 {{- end }}
