--- a/expino/values.yaml
+++ b/expino/values.yaml
@@ -19,7 +19,9 @@ displays:
         # kubernetes.io/tls-acme: "true"
       hosts:
         - host: chart-example.local
-          paths: []
+          paths:
+          - path: /
+            pathType: ImplementationSpecific
       tls: []
       #  - secretName: chart-example-tls
       #    hosts:
@@ -45,7 +47,9 @@ api:
       # kubernetes.io/tls-acme: "true"
     hosts:
       - host: chart-example.local
-        paths: []
+        paths:
+        - path: /
+          pathType: ImplementationSpecific
     tls: []
     #  - secretName: chart-example-tls
     #    hosts:
@@ -63,7 +67,9 @@ admin:
       # kubernetes.io/tls-acme: "true"
     hosts:
       - host: chart-example.local
-        paths: []
+        paths:
+        - path: /
+          pathType: ImplementationSpecific
     tls: []
     #  - secretName: chart-example-tls
     #    hosts:
